Table accounts {
  account_id    int          [pk, increment]
  email         varchar(100) [unique, not null]
  password_hash varchar(255) [not null]
  role          varchar(20)  [not null, note: "CHECK (role IN ('admin','caregiver','elder','family'))"]
  is_active     boolean      [default: true]
  created_at    timestamp    [default: `now()`]
  last_login    timestamp
}

Table admins {
  admin_id    int       [pk, increment]
  account_id  int       [unique, not null, ref: > accounts.account_id]
  full_name   varchar(100) [not null]
  created_at  timestamp [default: `now()`]
}

Table users {
  user_id        int          [pk, increment]
  account_id     int          [unique, not null, ref: > accounts.account_id]
  full_name      varchar(100) [not null]
  date_of_birth  date
  gender         varchar(10)
  address        text
  contact_number varchar(20)
  created_at     timestamp    [default: `now()`]
}

Table caregivers {
  caregiver_id   int          [pk, increment]
  account_id     int          [unique, not null, ref: > accounts.account_id]
  full_name      varchar(100) [not null]
  contact_number varchar(20)
  relationship   varchar(50)
  created_at     timestamp    [default: `now()`]
}

Table family_access {
  family_id      int          [pk, increment]
  account_id     int          [unique, not null, ref: > accounts.account_id]
  user_id        int          [not null, ref: > users.user_id, note: "Elder this family member is granted read-only access to"]
  full_name      varchar(100) [not null]
  relationship   varchar(50)
  granted_by     int          [ref: > caregivers.caregiver_id, note: "Caregiver who granted access"]
  is_active      boolean      [default: true]
  created_at     timestamp    [default: `now()`]
}

Table user_caregiver {
  id           int       [pk, increment]
  user_id      int       [not null, ref: > users.user_id]
  caregiver_id int       [not null, ref: > caregivers.caregiver_id]
  assigned_at  timestamp [default: `now()`]
  is_active    boolean   [default: true]
}

Table check_ins {
  checkin_id     int       [pk, increment]
  user_id        int       [not null, ref: > users.user_id]
  checkin_time   timestamp [not null]
  mood           int       [note: "1-5 scale"]
  activity_level int       [note: "1-5 scale"]
  notes          text
  context_note   text      [note: "Optional elder-provided reason for the check-in"]
  is_missed      boolean   [default: false]
  sync_status    varchar(20) 
  created_at     timestamp [default: `now()`]
}

Table behavioral_baselines {
  baseline_id        int       [pk, increment]
  user_id            int       [not null, ref: > users.user_id]
  avg_mood_score     float
  avg_activity_level float
  stddev_mood        float
  stddev_activity    float
  checkin_frequency  float     [note: "Fraction of expected check-ins actually submitted during period_days, e.g. 6/7 = 0.857"]
  sample_size        int       [not null]
  period_days        int       [not null]
  is_active          boolean   [default: true]
  computed_at        timestamp [default: `now()`]
}

Table anomalies {
  anomaly_id          int          [pk, increment]
  user_id             int          [not null, ref: > users.user_id]
  baseline_id         int          [not null, ref: > behavioral_baselines.baseline_id]
  checkin_id          int          [ref: > check_ins.checkin_id, note: "Null if triggered by a missed check-in"]
  anomaly_type        varchar(50)  [note: "CHECK (anomaly_type IN ('mood_deviation','activity_deviation','frequency_deviation','missed_checkin'))"]
  severity             varchar(20)  [note: "CHECK (severity IN ('low','medium','high'))"]
  deviation_metric     varchar(50)  [note: "e.g. 'mood', 'activity' — the metric that deviated"]
  deviation_magnitude  float        [note: "Number of std devs from baseline"]
  duration_days        int          [note: "Consecutive days the deviation has persisted"]
  detected_at          timestamp    [default: `now()`]
  is_resolved          boolean      [default: false]
}

Table notifications {
  notification_id int       [pk, increment]
  anomaly_id       int       [not null, ref: > anomalies.anomaly_id]
  caregiver_id     int       [not null, ref: > caregivers.caregiver_id]
  message          text
  sent_at          timestamp [default: `now()`]
  delivery_attempts int      [default: 0]
  delivered_at      timestamp
  next_delivery_at  timestamp [default: `now()`]
  is_read          boolean   [default: false]
  acknowledged_at  timestamp
}

Table refresh_tokens {
  refresh_token_id int       [pk, increment]
  account_id       int       [not null, ref: > accounts.account_id]
  token_hash       varchar(64) [not null, unique, note: "SHA-256 of opaque refresh token"]
  expires_at       timestamp [not null]
  revoked_at       timestamp
  replaced_by      int       [ref: > refresh_tokens.refresh_token_id]
  created_at       timestamp [default: `now()`]
}

Table login_failures {
  failure_id   int          [pk, increment]
  email        varchar(255) [not null]
  remote_addr  varchar(255) [not null]
  attempted_at timestamp    [default: `now()`]
}

Table notification_delivery_attempts {
  delivery_attempt_id int       [pk, increment]
  notification_id     int       [not null, ref: > notifications.notification_id]
  attempted_at        timestamp [default: `now()`]
  delivered           boolean   [not null]
  error_detail        text
}

Table health_notes {
  note_id      int       [pk, increment]
  user_id      int       [not null, ref: > users.user_id]
  caregiver_id int       [not null, ref: > caregivers.caregiver_id]
  note_text    text      [not null]
  created_at   timestamp [default: `now()`]
}

Table audit_logs {
  log_id      int          [pk, increment]
  account_id  int          [not null, ref: > accounts.account_id]
  action      varchar(100) [not null, note: "e.g. 'view_checkin', 'export_report', 'acknowledge_alert'"]
  target_type varchar(50)  [note: "e.g. 'checkin', 'report', 'notification'"]
  target_id   int
  created_at  timestamp    [default: `now()`]
}
